--- a/sk/.gitignore
+++ b/sk/.gitignore
@@ -1,9 +1,10 @@
 .DS_Store
 node_modules
-/playwright-report
 /build
 /.svelte-kit
 /package
 .env
 .env.*
 !.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
