--- a/sk/package.json
+++ b/sk/package.json
@@ -1,39 +1,33 @@
 {
-  "name": "pocketbase-sveltekit-starter",
+  "name": "sk",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "dev:backend": "cd ../pb && modd",
-    "backend": "cd ../pb && ./pocketbase serve --publicDir=../sk/build",
     "build": "vite build",
-    "build:backend": "cd ../pb && go build",
-    "typegen": "pocketbase-typegen --db ../pb/pb_data/data.db --out ./src/lib/pocketbase/generated-types.ts",
-    "test": "playwright test",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check .",
-    "format": "prettier --write ."
+    "lint": "prettier --plugin-search-dir . --check .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "typegen": "pocketbase-typegen --db ../pb/pb_data/data.db --out ./src/lib/pocketbase/pocketbase-types.ts"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0",
-    "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "^1.0.1",
-    "@types/node": "^18.11.17",
-    "pocketbase-typegen": "^1.1.2",
-    "prettier": "^2.8.1",
-    "prettier-plugin-svelte": "^2.9.0",
-    "sass": "^1.57.1",
-    "svelte": "^3.55.0",
-    "svelte-check": "^2.10.3",
-    "svelte-preprocess": "^4.10.7",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/kit": "^1.20.4",
+    "@unocss/extractor-svelte": "^0.55.1",
+    "@unocss/reset": "^0.55.1",
+    "pocketbase": "^0.16.0",
+    "pocketbase-typegen": "^1.1.12",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "typescript": "^5.0.0",
+    "unocss": "^0.55.1",
+    "vite": "^4.4.2"
   },
-  "type": "module",
-  "dependencies": {
-    "pocketbase": "^0.15.2"
-  }
+  "type": "module"
 }
